[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxpdf"
version = "0.1.0"
description = "Python SDK for the 0xPdf PDF-to-JSON API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["pdf", "ocr", "parsing", "json", "api", "document", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://0xpdf.com"
Documentation = "https://0xpdf.com/docs"
Repository = "https://github.com/risha-max/oxpdf-python"
Issues = "https://github.com/risha-max/oxpdf-python/issues"

[tool.setuptools.package-data]
oxpdf = ["py.typed"]
